<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayoutDoctor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_white_background"
    android:orientation="vertical" >

    <include layout="@layout/impatient_action_bar" />

    <TableRow
        android:id="@+id/tableRowDoctorHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginRight="@dimen/right_dimension_20"
        android:layout_marginTop="@dimen/top_dimension"
        tools:ignore="RtlHardcoded" >

        <TextView
            android:id="@+id/textViewDoctorHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_view_header" />
    </TableRow>

    <ImageView
        android:id="@+id/imageViewDoctorVerticalLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/void_decription"
        android:src="@drawable/ic_vertical_line" />

    <TableLayout
        android:id="@+id/tableLayoutDoctor"
        android:layout_width="320dp"
        android:layout_height="220dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/top_dimension" >

        <TableRow
            android:id="@+id/tableRowIdNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textViewDoctorIdNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_view_id_number" />

            <EditText
                android:id="@+id/editTextDoctorIdNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:enabled="false"
                android:inputType="text"
                tools:ignore="TextFields" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRowFirstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textViewDoctorFirstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_view_first_name" />

            <EditText
                android:id="@+id/editTextDoctorFirstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:enabled="false"
                android:inputType="text" >

                <requestFocus />
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/tableRowLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textViewDoctorLastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_view_last_name" />

            <EditText
                android:id="@+id/editTextDoctorLastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:enabled="false"
                android:inputType="text" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRowEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textViewDoctorEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_view_email" />

            <EditText
                android:id="@+id/editTextDoctorEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:enabled="false"
                android:inputType="textEmailAddress" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRowPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textViewDoctorPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_view_phone" />

            <EditText
                android:id="@+id/editTextDoctorPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:enabled="false"
                android:inputType="phone" />

        </TableRow>
    </TableLayout>

    <TableRow
        android:id="@+id/tableRowDoctorContact"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginRight="@dimen/right_dimension_20"
        android:layout_marginTop="@dimen/top_dimension"
        tools:ignore="RtlHardcoded" >

        <Button
            android:id="@+id/buttonDoctorContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/button_contact" />
    </TableRow>

</LinearLayout>